feat: implement story 1.4
